# epub_summarizer

./: LICENSE  README.md  pyproject.toml  requirements.txt  summarize_epub_streamlit.py
.devcontainer/: devcontainer.json
