[project]
name = "epub-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "distro==1.9.0",
    "ebooklib==0.18",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "jiter==0.8.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "narwhals==1.16.0",
    "numpy==2.2.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "protobuf==5.29.1",
    "pyarrow==18.1.0",
    "pydantic==2.10.3",
    "pydantic-ai>=0.1.3",
    "pydantic-core==2.27.1",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "streamlit==1.40.2",
    "tenacity==9.0.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "watchdog==6.0.0",
]
